--- a/View/ViewLogin/ForgotPasswordForm.resx
+++ b/View/ViewLogin/ForgotPasswordForm.resx
@@ -117,4 +117,88 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="bunifuPanel1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAtwAAAEvCAYAAAB2RxZDAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAZpSURBVHhe7doxakNREARB3f88up+NAhmMMnt6oyr4oH2g
+        vIN5AAAAR57P59f7c7vdbrfb7Xa73f+7f3w8AAAAO4IbAAC2NDYAAIR+Bbf6BgCALcENAABXBDcAAGxp
+        bAAACJmUAABASHADAMAVwQ0AAFsaGwAAQiYlAAAQEtwAAHBFcAMAwJbGBgCAkEkJAACEBDcAAFwR3AAA
+        sKWxAQAgZFICAAAhwQ0AAFcENwAAbGlsAAAImZQAAEBIcAMAwBXBDQAAWxobAABCJiUAABAS3AAAcEVw
+        AwDAlsYGAICQSQkAAIQENwAAXBHcAACwpbEBACBkUgIAACHBDQAAVwQ3AABsaWwAAAiZlAAAQEhwAwDA
+        FcENAABbGhsAAEImJQAAEBLcAABwRXADAMCWxgYAgJBJCQAAhAQ3AABcEdwAALClsQEAIGRSAgAAIcEN
+        AABXBDcAAGxpbAAACJmUAABASHADAMAVwQ0AAFsaGwAAQiYlAAAQEtwAAHBFcAMAwJbGBgCAkEkJAACE
+        BDcAAFwR3AAAsKWxAQAgZFICAAAhwQ0AAFcENwAAbGlsAAAImZQAAEBIcAMAwBXBDQAAWxobAABCJiUA
+        ABAS3AAAcEVwAwDAlsYGAICQSQkAAIQENwAAXBHcAACwpbEBACBkUgIAACHBDQAAVwQ3AABsaWwAAAiZ
+        lAAAQEhwAwDAFcENAABbGhsAAEImJQAAEBLcAABwRXADAMCWxgYAgJBJCQAAhAQ3AABcEdwAALClsQEA
+        IGRSAgAAIcENAABXBDcAAGxpbAAACJmUAABASHADAMAVwQ0AAFsaGwAAQiYlAAAQEtwAAHBFcAMAwJbG
+        BgCAkEkJAACEBDcAAFwR3AAAsKWxAQAgZFICAAAhwQ0AAFcENwAAbGlsAAAImZQAAEBIcAMAwBXBDQAA
+        WxobAABCJiUAABAS3AAAcEVwAwDAlsYGAICQSQkAAIQENwAAXBHcAACwpbEBACBkUgIAACHBDQAAVwQ3
+        AABsaWwAAAiZlAAAQEhwAwDAFcENAABbGhsAAEImJQAAEBLcAABwRXADAMCWxgYAgJBJCQAAhAQ3AABc
+        EdwAALClsQEAIGRSAgAAIcENAABXBDcAAGxpbAAACJmUAABASHADAMAVwQ0AAFsaGwAAQiYlAAAQEtwA
+        AHBFcAMAwJbGBgCAkEkJAACEBDcAAFwR3AAAsKWxAQAgZFICAAAhwQ0AAFcENwAAbGlsAAAImZQAAEBI
+        cAMAwBXBDQAAWxobAABCJiUAABAS3AAAcEVwAwDAlsYGAICQSQkAAIQENwAAXBHcAACwpbEBACBkUgIA
+        ACHBDQAAVwQ3AABsaWwAAAiZlAAAQEhwAwDAFcENAABbGhsAAEImJQAAEBLcAABwRXADAMCWxgYAgJBJ
+        CQAAhAQ3AABcEdwAALClsQEAIGRSAgAAIcENAABXBDcAAGxpbAAACJmUAABASHADAMAVwQ0AAFsaGwAA
+        QiYlAAAQEtwAAHBFcAMAwJbGBgCAkEkJAACEBDcAAFwR3AAAsKWxAQAgZFICAAAhwQ0AAFcENwAAbGls
+        AAAImZQAAEBIcAMAwBXBDQAAWxobAABCJiUAABAS3AAAcEVwAwDAlsYGAICQSQkAAIQENwAAXBHcAACw
+        pbEBACBkUgIAACHBDQAAVwQ3AABsaWwAAAiZlAAAQEhwAwDAFcENAABbGhsAAEImJQAAEBLcAABwRXAD
+        AMCWxgYAgJBJCQAAhAQ3AABcEdwAALClsQEAIGRSAgAAIcENAABXBDcAAGxpbAAACJmUAABASHADAMAV
+        wQ0AAFsaGwAAQiYlAAAQEtwAAHBFcAMAwJbGBgCAkEkJAACEBDcAAFwR3AAAsKWxAQAgZFICAAAhwQ0A
+        AFcENwAAbGlsAAAImZQAAEBIcAMAwBXBDQAAWxobAABCJiUAABAS3AAAcEVwAwDAlsYGAICQSQkAAIQE
+        NwAAXBHcAACwpbEBACBkUgIAACHBDQAAVwQ3AABsaWwAAAiZlAAAQEhwAwDAFcENAABbGhsAAEImJQAA
+        EBLcAABwRXADAMCWxgYAgJBJCQAAhAQ3AABcEdwAALClsQEAIGRSAgAAIcENAABXBDcAAGxpbAAACJmU
+        AABASHADAMAVwQ0AAFsaGwAAQh/B/Xp4P75/u91ut9vtdrvd7r/dr/8BAACpx+MbC6qve1KpQ5kAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAksAAAA0CAYAAACaVnw/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAANpSURBVHhe7d0hjB1FHAfgJ5GVlZV1O49mZ1vVSiQSQ15v
+        5gkMCU0QrcOgSRAVJBVViCoESVVtRcUFVVeHOujda0tLqICZ95bQu9tbjgOSu9vvn3zZvDf7Zp78ZXZm
+        dnaSunZlcbkLW7djs7zbhbS9kX8HADg9+owyz/e7Jn8R319e7aPM/1Ntu7jYD7bThrwq3g7/MQCA0yjt
+        luuqZJkHbbMMfcT599U0iwsx5K9Lx6vDgwIAnEFN2luHpnZxsY88J6s6XVU6LCksvTk0CADAWdfkVZyn
+        j/vo888qzvOtkrp2BjsGADg/nsf58m4fgY5X5Uf3ivpcb6hDAIBzJYb8Ijb5uz4KjVcMN+9YnwQATE1s
+        0utyvddHouEqIelGFzx6AwAm6/mRa5jWRwOE/NOBHwAATEoM6ed6pmQfkf6qGPI3bZOcnQQAEPKjPiJt
+        qmsWl0pYsqAbAGAt7e478bseyjR8IwDAVKXtPiqtjwqw+w0AYL9X9U0m/Snd63elDN0EADBVq26ePpq1
+        IX8VLewGADisyQ9mcZ6+H2wEAJi4GNLTWV28NNQIADB5Td6pO+Gc2A0AcIS6E26wAQAAYQkAYJSwBAAw
+        QlgCABghLAEAjBCWAABGCEsAACOEJQCAEcISAMAIYQkAYISwBAAwQlgCABghLAEAjBCWAABGCEsAACOE
+        JQCAETUsrQ5+CQDAxiyG9HSoAQCAvKozS48OfAkAwFp6Nuvm+f5wIwDAdMX1NT2exSZ92DVpb+gmAIAJ
+        +zU2W5/Nrl9fvFc+vDnQCAAwaTHkl12zuDSrVaeYNlNNAABspGfroFSrnecPyhe7wzcCAExLDPlFO0+f
+        9lFpU6XBrjgAgLV3ZpX+rLZZBgu9AYDJK3moboDrI9L+6uZbX8aQBSYAYJJiSK+vhvxtH42Gq4SlhyVN
+        /TbUAQDAOfeknhTQx6LhqjeUVPWDwAQATEl9BVzTLC70kWi8NoEpP+waL9kFAM63+uitXJ8cOyi9WzHc
+        vFM6cKQAAHA+NWmvrlH620dvY9U1+UadltrslEvDAwEAnCnLVyXj7By56+0kVTuLIf9YvCyD/FKuAwMD
+        AJw2m8meNuS3xWodkkL6vI84/33Vd6S08/RJGfhxPbDp8B8CADg96mRPySzbXdi6fe3K4nIfaY5Zs9kf
+        svcHOk1EQ9cAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="bunifuTextBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAmgAAAA2CAYAAABz9GXnAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAE7SURBVHhe7dYxDQMxAARB80fll2EERgDkZclNEHiLGema
+        Q7ADAICgtdZnzvkzMzMzs3vbTXbybIx9AABw126yk2cCDQCgQKABAMQINACAGIEGABAj0AAAYgQaAECM
+        QAMAiBFoAAAxAg0AIEagAQDECDQAgBiBBgAQI9AAAGIEGgBAjEADAIgRaAAAMQINACBGoAEAxAg0AIAY
+        gQYAECPQAABiBBoAQIxAAwCIEWgAADECDQAgRqABAMQINACAGIEGABAj0AAAYgQaAECMQAMAiBFoAAAx
+        Ag0AIEagAQDECDQAgBiBBgAQI9AAAGIEGgBAjEADAIgRaAAAMQINACBGoAEAxAg0AIAYgQYAECPQAABi
+        BBoAQIxAAwCIEWgAADECDQAg5i/Qnuf57sPMzMzM7m032ckzAAA6xngB4n41TENLcXcAAAAASUVORK5C
+        YII=
+</value>
+  </data>
+  <data name="bunifuPanel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAtwAAABHCAYAAAA0l5DAAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAGOSURBVHhe7dYxDYAwAABBpOGrC14qk5BC0NDfbrjkJfwx
+        x33O8VwAAMB+33D/sQAAgP0MNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
+        AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
+        AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
+        AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
+        AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
+        AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
+        AGSe9QI+nEEVUMQmdwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="bunifuLabel1.BaseStylesheet" xml:space="preserve">
+    <value>#bunifu-label { padding: 0px; font-family: 'Segoe UI'; font-size: 16.2pt; width: 100%; height: 100%; font-style: normal; font-weight: bold; text-decoration: none; color: rgb(255, 255, 255); text-align: left; }</value>
+  </data>
 </root>
