--- a/View/ViewLogin/ForgotPasswordForm.resx
+++ b/View/ViewLogin/ForgotPasswordForm.resx
@@ -152,7 +152,7 @@
         SUVORK5CYII=
 </value>
   </data>
-  <data name="bunifuButton1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="sendGetForgotBtn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAksAAAA0CAYAAACaVnw/AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAANpSURBVHhe7d0hjB1FHAfgJ5GVlZV1O49mZ1vVSiQSQ15v
@@ -173,29 +173,29 @@
         svcHOk1EQ9cAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="bunifuTextBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="fogortEmaiTxt.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAmgAAAA2CAYAAABz9GXnAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAE7SURBVHhe7dYxDQMxAARB80fll2EERgDkZclNEHiLGema
-        Q7ADAICgtdZnzvkzMzMzs3vbTXbybIx9AABw126yk2cCDQCgQKABAMQINACAGIEGABAj0AAAYgQaAECM
-        QAMAiBFoAAAxAg0AIEagAQDECDQAgBiBBgAQI9AAAGIEGgBAjEADAIgRaAAAMQINACBGoAEAxAg0AIAY
-        gQYAECPQAABiBBoAQIxAAwCIEWgAADECDQAgRqABAMQINACAGIEGABAj0AAAYgQaAECMQAMAiBFoAAAx
-        Ag0AIEagAQDECDQAgBiBBgAQI9AAAGIEGgBAjEADAIgRaAAAMQINACBGoAEAxAg0AIAYgQYAECPQAABi
-        BBoAQIxAAwCIEWgAADECDQAg5i/Qnuf57sPMzMzM7m032ckzAAA6xngB4n41TENLcXcAAAAASUVORK5C
-        YII=
+        iVBORw0KGgoAAAANSUhEUgAAAksAAAA3CAYAAAAcwg6RAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAEuSURBVHhe7dbRCQIxAETB9F/VhZRhGRaghDsQRd41MAP7
+        sxW8AQDAjbXW4ziOl5mZmZmd2310pdIY+wAA4GP30ZVKYgkA4JdYAgAIYgkAIIglAIAglgAAglgCAAhi
+        CQAgiCUAgCCWAACCWAIACGIJACCIJQCAIJYAAIJYAgAIYgkAIIglAIAglgAAglgCAAhiCQAgiCUAgCCW
+        AACCWAIACGIJACCIJQCAIJYAAIJYAgAIYgkAIIglAIAglgAAglgCAAhiCQAgiCUAgCCWAACCWAIACGIJ
+        ACCIJQCAIJYAAIJYAgAIYgkAIIglAIAglgAAglgCAAhiCQAgiCUAgCCWAACCWAIACGIJACCIJQCAIJYA
+        AIJYAgAIX7E053zuw8zMzMzO7T66UgkAgP/GeAM5IAA+dyGGJQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="bunifuPanel2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="forgotPassLbl.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAtwAAABHCAYAAAA0l5DAAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAGOSURBVHhe7dYxDYAwAABBpOGrC14qk5BC0NDfbrjkJfwx
+        iVBORw0KGgoAAAANSUhEUgAAAtwAAABUCAYAAACx1eD1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAHPSURBVHhe7dYxDYAwAABBpOGrC14qk5BC0NDfbrjkJfwx
         x33O8VwAAMB+33D/sQAAgP0MNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
         AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
         AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
         AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
         AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
         AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
-        AGSe9QI+nEEVUMQmdwAAAABJRU5ErkJggg==
+        AIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcAAIQMNwAAhAw3AACEDDcA
+        AIQMNwAAZJ71AtAAi9e+WJVKAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="bunifuLabel1.BaseStylesheet" xml:space="preserve">
